<resources>
    <string name="app_name">SEP-Assignment1</string>
    <string name="title_activity_signup">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="FirstNameEmpty">First name is empty!</string>
    <string name="LastNameEmpty">Last name is empty!</string>
    <string name="AddressEmpty">Address is empty!</string>
    <string name="BSBEmpty">BSB is empty!</string>
    <string name="EditAccountSuccess">Account is successfully edited!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_firebase_image">Image Activity</string>

    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_link_to_login">Login here!</string>
    <string name="signupSuccess">Signed up successfully</string>
    <string name="signupFail">Authentication failed.</string>
    <string name="FailRead">Failed to read data</string>
    <string name="tripChange">Data is changed</string>
    <string name="tripNull">Trip is null</string>
    <string name="NoticeDialogFragment">NoticeDialogFragment</string>
    <string name="EmailEmpty">Enter email address!</string>
    <string name="PasswordEmpty">Enter password!</string>
    <string name="PasswordFormat">Password too short, enter minimum 6 characters!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- String related to Delivery -->
    <string name="customer_location">Customer Location</string>
    <string name="Resturant_location">Resturant Location</string>
    <string name="order_number">Order number</string>

    <!-- String related to Signup -->
    <string name="customer_signup">Customer</string>
    <string name="resturant_signup">Resturant</string>
    <string name="delivery_signup">Delivery</string>
    <string name="signQuestion">Would you like to Sign up as?</string>

    <!-- app header for user screens -->
    <string name="title_activity_restaurant_main">Menus</string>
    <string name="title_activity_delivery_main">Delivery Information</string>
    <string name="title_activity_user_main">Restaurants</string>
    <string name="restaurant_txt">Restaurant</string>
    <string name="title_activity_signup_main">Signup</string>

    <!-- String related to add restaurant -->
    <string name="NameEmpty">Enter name</string>
    <string name="title_activity_add_food">Adding Food</string>
    <string name="title_activity_menu_main">Foods</string>
    <string name="title_activity_user_menu">UserMenuActivity</string>
    <string name="title_activity_user_food">UserFoodActivity</string>
    <string name="title_activity_balanc">Balance</string>
    <string name="title_activity_balance_topup">Top up</string>
    <string name="title_activity_balance_withdraw">Withdrawn</string>
    <string name="title_activity_cart">Cart</string>

    <string-array name="quantity_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="title_activity_account">Manage Account</string>
    <string name="title_activity_balance">Balance</string>
    <string name="title_activity_restaurant_signup">Sign up as Restaurant</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="bsb">bsb</string>
    <string name="driver_signup_activity">Sign up as Driver</string>
    <string name="orderactivity">Order Confirmation</string>
    <string name="edit_account">Edit Account</string>
    <string name="title_activity_order_list">Orders</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_pickup_order">PickupOrder</string>
    <string name="title_activity_driver_profile">DriverProfile</string>
    <string name="title_activity_delivery">DeliveryActivity</string>
</resources>
